updated homepage with all new image paths, updated about page, updated contact page, updated privacy policy, added all js files to js folder

--- a/SCSS/_about.scss
+++ b/SCSS/_about.scss
@@ -1,6 +1,6 @@
 /* 11.0 About Page Styling --------------------------------------- */
 .teamHero{
-  background-image: url("../img/TeamPic01.04.19Cropped.jpg");
+  background-image: url("/wp-content/uploads/2019/03/TeamPic01.04.19Cropped.jpg");
 }
 #contactWrap{
   @include breakpoint(smallScreen){
