--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -52,7 +52,7 @@
 }
 #featuredProjectWrap{
 	position: relative;
-	background-image: url("../img/designBuild2Cropped.jpg");
+	background-image: url("/wp-content/uploads/2019/03/designBuild2Cropped.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -260,7 +260,7 @@
 }
 .siteCTAWrap{
 	position: relative;
-	background-image: url("../img/designBuild3Cropped.jpg");
+	background-image: url("/wp-content/uploads/2019/03/designBuild3Cropped.jpg");
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
