updated contact, thank you, project, about, home, and cranberry pages to update all links and image urls

--- a/SCSS/_contact.scss
+++ b/SCSS/_contact.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   margin-bottom: 50px;
 }
-#primaryContact{
+#CF5c7d6d9457fa6_1-row-1{
   display: flex;
   flex-direction: column;
     input,select{
