--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -101,7 +101,7 @@ nav{
 	position: absolute;
 	top: 0;
 	z-index: 99999;
-	height: 100vh;
+	height: 70vh;
 	width: 100vw;
 	background-color:  $white;
 	transform: translateX(-100%);
@@ -215,6 +215,23 @@ nav{
 	cursor: pointer;
 	top: 30px;
 	right: 50px;
+}
+.closeMenuButton{
+	position: absolute;
+	cursor: pointer;
+	bottom: 0;
+	left: 0;
+	height: 60px;
+	background-color: $primaryColor;
+}
+#closeMenuButtonWrapper{
+	margin: 7px 25px;
+}
+#closeMenuTitle{
+	margin: 0 auto;
+	color: $white;
+	padding: 5px;
+	border: 1px solid $white;
 }
 .linkList2{
 	display:none;
