--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ nav {
   position: absolute;
   top: 0;
   z-index: 99999;
-  height: 100vh;
+  height: 70vh;
   width: 100vw;
   background-color: #FFFFFF;
   transform: translateX(-100%);
@@ -496,6 +496,23 @@ nav {
   cursor: pointer;
   top: 30px;
   right: 50px; }
+
+.closeMenuButton {
+  position: absolute;
+  cursor: pointer;
+  bottom: 0;
+  left: 0;
+  height: 60px;
+  background-color: #0080c5; }
+
+#closeMenuButtonWrapper {
+  margin: 7px 25px; }
+
+#closeMenuTitle {
+  margin: 0 auto;
+  color: #FFFFFF;
+  padding: 5px;
+  border: 1px solid #FFFFFF; }
 
 .linkList2 {
   display: none; }
@@ -1301,10 +1318,10 @@ body {
   margin: 0 auto;
   margin-bottom: 50px; }
 
-#primaryContact {
+#CF5c7d6d9457fa6_1-row-1 {
   display: flex;
   flex-direction: column; }
-  #primaryContact input, #primaryContact select {
+  #CF5c7d6d9457fa6_1-row-1 input, #CF5c7d6d9457fa6_1-row-1 select {
     margin-top: 10px !important;
     margin-bottom: 10px;
     padding: .7em;
@@ -1314,7 +1331,7 @@ body {
     height: 60px;
     box-shadow: 2px 2px 10px rgba(42, 42, 42, 0.4);
     font-size: 18px !important; }
-  #primaryContact textarea {
+  #CF5c7d6d9457fa6_1-row-1 textarea {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: .7em;
@@ -1324,11 +1341,11 @@ body {
     border-radius: 5px;
     box-shadow: 2px 2px 10px rgba(42, 42, 42, 0.4);
     font-size: 18px !important; }
-  #primaryContact :focus {
+  #CF5c7d6d9457fa6_1-row-1 :focus {
     outline: none;
     border-bottom: 2px solid #0080c5;
     transition: .3s ease all; }
-  #primaryContact input[type="submit"] {
+  #CF5c7d6d9457fa6_1-row-1 input[type="submit"] {
     margin-top: 10px;
     border-bottom: none;
     font-size: 18px; }
